[package]
name = "halfbrown"
version = "0.1.10"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
license = "Apache-2.0/MIT"
edition = "2018"
description = "Multi backend HashMap for higher performance on different key space sizes"
repository = "https://github.com/Licenser/halfbrown"

[dependencies]
hashbrown = { git = "https://github.com/rust-lang/hashbrown.git", branch = "master", features = ["inline-more", "nightly"] }
serde = { version = "1", default-features = false,  optional = true }
fxhash =  { version = "0.2",  optional = true }
indexmap = { git = "https://github.com/as-com/indexmap.git", branch = "hashbrown-master", optional = true }
ahash = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = []

[[bench]]
name = "compare"
harness = false
